[package]
edition = "2021"
name = "yfb"
version = "0.1.0"

[dependencies]
validator = { version = "0.16.0", features = ["derive"] }
web-sys = { version = "0.3.61", features = [
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlOptionElement",
  "HtmlTextAreaElement",
] }
yew = "0.20"
yfb_derive = { path = "../yfb_derive", optional = true }

[dev-dependencies]
yew = { version = "0.20", features = ["ssr", "csr"] }
wasm-bindgen-test = "0.3"
wasm-bindgen = "0.2"
gloo = { version = "0.8" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.26", features = ["full"] }

[features]
default = ["derive"]
derive = ["dep:yfb_derive"]
